--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
+  "homepage": "https://InDaZZ.github.io/News_TZ",
   "eslintConfig": {
     "extends": [
       "react-app",
